kubernetes/apps/immich/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.tmf-solutions.com`)
      kind: Rule
      services:
        - name: immich
          port: 2283
  tls: {}
